--- a/build_posix/configure.ac.in
+++ b/build_posix/configure.ac.in
@@ -148,6 +148,14 @@ if test "$wt_cv_enable_diagnostic" = "yes"; then
 	    [DIAGNOSTIC BUILDS ARE NOT RECOMMENDED FOR PRODUCTION DEPLOYMENT.])
 fi
 
+# Warn that diagnostic builds should not be used in production
+if test "$wt_cv_enable_timing" = "yes"; then
+	AC_MSG_WARN(
+	    [TIMING INSTRUMENTATION NOT RECOMMENDED FOR PRODUCTION DEPLOYMENT.])
+fi
+
+
+
 # If we are building in a tree without documentation, check if doxygen is
 # available.
 if test -f "$srcdir/docs/index.html" ; then
